--- a/package.json
+++ b/package.json
@@ -9,14 +9,44 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/config-plugins": "~7.2.2",
+    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
+    "base-64": "^1.0.0",
     "expo": "~49.0.10",
+    "expo-asset": "~8.10.1",
+    "expo-camera": "~13.4.4",
+    "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.8",
+    "expo-face-detector": "~12.2.0",
+    "expo-file-system": "~15.4.4",
+    "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-linking": "~5.0.2",
+    "expo-notifications": "~0.20.1",
+    "expo-permissions": "~14.2.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.12",
+    "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-fade-in-out": "^1.0.6",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screen-keyboard": "^1.2.2",
+    "react-native-screens": "~3.22.0",
+    "react-native-virtual-keyboard": "^1.2.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/lodash": "^4.14.182",
     "@types/react": "~18.2.14",
+    "jest": "^29.6.2",
+    "jest-expo": "^49.0.0",
+    "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
   "private": true
